import java.util.Random;

public class Tour {
    private Joueur m_joueur;

    public Tour(Joueur joueur) {
        m_joueur = joueur;
    }

    public void changerJoueur() {
    }

    public void piocher() {
    }

    public void defausser(Pokemon p) {
    }

    public void attaquer(Joueur adversaire) {

    }
    public void finirTour() {
    }

}
